Revision history for {{$dist->name}}

{{$NEXT}}
        - better fix for misleading 'provides' metadata

0.06      2014-03-20 05:56:43Z
        - fix misleading 'provides' metadata (added in 0.05) that may confuse
          some tools

0.05      2014-02-16 09:14:30Z
        - convert to Dist::Zilla, with more metadata

0.04      2014-02-01
        - RT#83667: localize $SIG{__DIE__} before an eval

0.03      2008-05-15
        - Work around the strangeness of if.pm trying to use ":all.pm". WTF?

0.02      2008-04-29
        - Tie::RefHash related dependencies changed
        - ::Compat imports all of Hash::Util::FielDhash on 5.10 so that fully qualified calls work

0.01      2008-01-21
        - Initial release