@@ -24,5 +24,6 @@ Test::use::ok = 0
 [Prereqs / DevelopRequires]
 Tie::RefHash::Weak = 0.08
 Tie::RefHash = 1.38
+Devel::Hide = 0
 
 [ContributorsFromGit]
